fixed header spacing

--- a/lesson6/css/preston-medium.css
+++ b/lesson6/css/preston-medium.css
@@ -23,6 +23,10 @@
         width: 80%;
     }
 
+    .header-flex {
+        display: block;
+    }
+
     footer {
         width: 100%;
     }
