--- a/lesson6/css/preston.css
+++ b/lesson6/css/preston.css
@@ -201,6 +201,10 @@ footer {
     width: 100%;
 }
 
+.header-flex {
+    display: block;
+}
+
 #article-image {
     display: block;
     float: none;
